--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <title>React App</title>
   </head>
   <body>
     <div id="root"></div>
-    <script src="dist/bundle.js"></script>
+    <script src="/bundle.js"></script>
   </body>
 </html>
