--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
   </head>
   <body>
     <div id="root"></div>
+    <script src="/socket.io/socket.io.js"></script>
+    <script> var socket = io();</script>
     <script src="/bundle.js"></script>
   </body>
 </html>
