--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <script src="https://kit.fontawesome.com/553f00b44e.js" crossorigin="anonymous"></script>
     <script src="/bundle.js"></script>
   </body>
 </html>
