refactored syntax processing

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <script src="https://unpkg.com/babel-standalone@6.26.0/babel.js"></script>
     <script src="/bundle.js"></script>
   </body>
 </html>
