refactor code transpile

--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,9 @@
 <html lang="en">
   <head>
-    <title>React App</title>
+    <title>Algo Clash</title>
   </head>
   <body>
     <div id="root"></div>
-    <script src="https://unpkg.com/babel-standalone@6.26.0/babel.js"></script>
     <script src="/bundle.js"></script>
   </body>
 </html>
